--- a/_config.yml
+++ b/_config.yml
@@ -2,17 +2,17 @@
 ## to customize your blog
 
 title: Stat 386 Blog
-description: "This description of the blog will appear on the 'About' page." 
-author: Your name
-author_description: "This description of who you are will appear on the 'About' page." 
+description: "The beautiful intersection between statistics and sports." 
+author: Eli Ladle
+author_description: "I am a senior at BYU studying Statistics" 
 
-url: https://esnt.github.io ## change this to https://yourusername.github.io
-baseurl: /another-stat386-theme ## change this to the name of your blog repository
+url: https://eladle21.github.io ## change this to https://yourusername.github.io
+baseurl: /my-blog ## change this to the name of your blog repository
 header_image: /assets/img/headerimg.jpg ## change your header image if you want
 
 ## Add your social media user names.  Github is required, the rest are optional
 social:
-    github:  ## required
+    github: github.com/eladle21 ## required
     twitter: 
     facebook: 
     email: 
